Fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -98,9 +98,10 @@ main > #listcontainer {
     margin-left: auto;
     margin-right: auto;
     margin-top: 3rem;
+    padding-bottom: 4rem;
     background-image:url("img/list-bg.png"); 
     width: 100%;
-    height: 19rem;
+
     background-repeat: no-repeat;
     background-size: 100%;
     justify-content: space-evenly;
@@ -108,12 +109,12 @@ main > #listcontainer {
 main > div > #list1 > ul {
     list-style: none;
     line-height: 1.5rem;
-    margin-top: 5rem;
+    margin-top: 3rem;
 }
 main > div > #list2 > ul {
     list-style: none;
     line-height: 1.5rem;
-    margin-top: 5rem;
+    margin-top: 3rem;
 }
 #pre-footer {
     display: flex;
